# ddb_gui_qt5

./: .gitignore  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ActionManager.cpp  ActionManager.h  CMakeLists.txt  CoverArtBackend.cpp  CoverArtBackend.h  CoverArtCache.cpp  CoverArtCache.h  CoverArtQuick.cpp  CoverArtQuick.h  CoverArtWidget.cpp  CoverArtWidget.h  DBApi.cpp  DBApi.h  DBApiWrapper.cpp  DBApiWrapper.h  DBFileDialog.cpp  DBFileDialog.h  DeadbeefTranslator.cpp  DeadbeefTranslator.h  DefaultActions.cpp  DefaultActions.h  DefaultActions.ui  DefaultPlugins.cpp  DefaultPlugins.h  GuiUpdater.cpp  GuiUpdater.h  Images.qrc  MainDrawer.qml  MainPane.qml  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowActions.cpp  MainWindow_actions.cpp  Makefile  MediasourceModel.cpp  (+54 more)
.github/workflows/: build.yml
config.tests/libintl/: libintl.pro  test_libintl.cpp
dbapi/: ActionOwner.cpp  ActionOwner.h  Actions.cpp  Actions.h  ActionsDefault.cpp  ActionsDefault.h  CMakeLists.txt  CoverArt.cpp  CoverArt.h  CoverArtBackend.cpp  CoverArtBackend.h  CoverArtCache.cpp  CoverArtCache.h  DBApi.cpp  DBApi.h  Equalizer.cpp  Equalizer.h  ItemImporter.cpp  ItemImporter.h  MedialibConfig.cpp  MedialibConfig.h  PlayItemIterator.cpp  PlayItemIterator.h  PlaybackControl.cpp  PlaybackControl.h  PlaylistManager.cpp  PlaylistManager.h  ScopeConfig.cpp  ScopeConfig.h  ScopeShader.cpp  ScopeShader.frag  ScopeShader.h  ScopeShader.vert  ScopeWrapper.cpp  Settings.cpp  Settings.h  VisScope.cpp  VisScope.h  Visualizations.cpp  Visualizations.h
dbapi/actions/: ActionSpec.cpp  ActionSpec.h  ActionsConfig.cpp  ActionsConfig.h  ActionsDeadbeef.cpp  ActionsDeadbeef.h  ActionsPlaceholder.cpp  ActionsPlaceholder.h
dbapi/include/: artwork.h  medialib.h
dbapi/include/deadbeef/: deadbeef.h
dbapi/models/: ActionsModel.cpp  ActionsModel.h  DRoleMapProxyModel.cpp  DRoleMapProxyModel.h  MediasourceModel.cpp  MediasourceModel.h  PlayItemFilterModel.cpp  PlayItemFilterModel.h  PlayItemModel.cpp  PlayItemModel.h  PlayItemSelectionModel.cpp  PlayItemSelectionModel.h  PlayItemTableProxyModel.cpp  PlayItemTableProxyModel.h  PlaylistBrowserModel.cpp  PlaylistBrowserModel.h  PlaylistModel.cpp  PlaylistModel.h  PlayqueueModel.cpp  PlayqueueModel.h  PluginModel.cpp  PluginModel.h  ScriptableModel.cpp  ScriptableModel.h  ScriptableSimple.cpp  ScriptableSimple.h  TreeNode.cpp  TreeNode.h
dbapi/scriptable/: scriptable.c  scriptable.h
include/: artwork2.h  callbacks.cpp  callbacks.h  dirent.h  medialib.h  parser.cpp  parser.h
include/deadbeef/: deadbeef.h
plugins/CoverArt/: CoverArt.cmake  CoverArtCache.cpp  CoverArtPlugin_ru_RU.ts  CoverArtWidget.cpp  CoverArtWidget.h  CoverArtWrapper.cpp  CoverArtWrapper.h
plugins/Hotkeys/: HotkeyReadDialog.cpp  HotkeyReadDialog.h  Hotkeys.cmake  HotkeysPlugin_ru_RU.ts  HotkeysTreeWidget.cpp  HotkeysTreeWidget.h  HotkeysWidget.cpp  HotkeysWidget.h
preferencesWidgets/: InterfacePreferencesWidget.cpp  InterfacePreferencesWidget.h  InterfacePreferencesWidget.ui  NetworkPreferencesWidget.cpp  NetworkPreferencesWidget.h  NetworkPreferencesWidget.ui  PluginSettingsWidget.cpp  PluginSettingsWidget.h  PluginsPreferencesWidget.cpp  PluginsPreferencesWidget.h  PluginsPreferencesWidget.ui  SoundPreferencesWidget.cpp  SoundPreferencesWidget.h  SoundPreferencesWidget.ui
qml/: ActionsTree.qml  CoverArt.qml  EqualizerQuick.qml  InfoQuick.qml  Oscilloscope.qml  OscilloscopePolar.qml  OscilloscopePolar_qt6.qml  Oscilloscope_qt6.qml  PlayItemView.qml  PlayItemViewDelegate.qml  PlaybackButtons.qml  PlaylistBrowserQuick.qml  PlaylistQuick.qml  PlaylistView.qml  PluginBrowser.qml  QueueManagerQuick.qml  SeekSlider.qml  SeekSliderDeadbeef.qml  TabBarQuick.qml  VolumeSliderQuick.qml  VolumeSliderQuickDeadbeef.qml  WidgetBrowser.qml
qml/DDB2/: AboutPane.qml  AboutQt.qml  ActionMenu.qml  ActionMenuMain.qml  CMakeLists.txt  DDB2Globals.qml  DDB2Page.qml  DDB2PlayItemViewDelegate.qml  DDB2TextView.qml  EqualizerPage.qml  EqualizerPane.qml  InfoQuick.qml  LogoPainter.qml  MainDrawer.qml  Medialib.qml  MedialibPresetPage.qml  PlaylistBrowser.qml  QueuePage.qml  QueuePane.qml  RepeatShuffleButton.qml  SearchPage.qml  SearchPane.qml  SeekSlider.qml  SwipeViewTab.qml  VisPage.qml  VolumeButton.qml  main.qml
qml/GuiCommon/: CMakeLists.txt  CoverArt.qml  DBFileDialogs.qml  DBWidget.qml  MainPane.qml  Oscilloscope.qml  OscilloscopePolar.qml  OscilloscopeShader.qml  PlayItemView.qml  PlayItemViewDelegate.qml  PlaylistQuick.qml  PluginWidgets.qml
qml/Material/: ActionsTree.qml  CMakeLists.txt  EqualizerQuick.qml  InfoQuick.qml  Oscilloscope.qml  OscilloscopePolar.qml  OscilloscopePolar_qt6.qml  Oscilloscope_qt6.qml  PlaybackButtons.qml  PlaylistBrowserQuick.qml  PluginBrowser.qml  QueueManagerQuick.qml  SeekSlider.qml  SeekSliderDeadbeef.qml  TabBarQuick.qml  VolumeSliderQuick.qml  VolumeSliderQuickDeadbeef.qml  WidgetBrowser.qml  main.qml
scripts/: build_static.sh  liblinks.sh
widgets/: ActionHandlers.cpp  ActionHandlers.h  ArtworkQuick.qml  CoverArt.cpp  CoverArt.h  CoverArtWidgetCache.cpp  CoverArtWidgetCache.h  DBActionMenu.cpp  DBActionMenu.h  DefaultPlugins.cpp  DefaultPlugins.h  EqualizerQuick.qml  InfoQuick.qml  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  Medialib.cpp  Medialib.h  Oscilloscope.qml  OscilloscopePolar.qml  PlaybackButtons.cpp  PlaybackButtons.h  PlaybackButtonsQuick.qml  Playlist.cpp  Playlist.h  PlaylistBrowser.cpp  PlaylistBrowser.h  PlaylistBrowserQuick.qml  PlaylistQuick.qml  PlaylistQuickSwipe.qml  PlaylistView.cpp  PlaylistView.h  PlaylistView.qml  PluginConfParser.cpp  PluginConfParser.h  PluginManager.cpp  PluginManager.h  PluginWidgetsLoader.cpp  PluginWidgetsLoader.h  (+20 more)
widgets/dbwidgetsapi/: CoverArtCache.cpp  CoverArtCache.h  DBWidgetsApi.cpp  DBWidgetsApi.h  PlaylistManagerCover.cpp  PlaylistManagerCover.h  ProxyPlayItemModel.cpp  ProxyPlayItemModel.h
widgets/plugins/: ActionsTree.cpp  ActionsTree.h  Medialib.cpp  Medialib.h  PlaybackButtons.cpp  PlaybackButtons.h  Playlist.cpp  Playlist.h  QueueManager.cpp  QueueManager.h  SeekSlider.cpp  SeekSlider.h  (+6 more)
(+1 files in other folders)
